<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vandanasri.roomdatabase.Main2Activity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter movie title"
        android:id="@+id/ed1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter movie description"
        android:id="@+id/ed2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter movie rating"
        android:inputType="number"
        android:id="@+id/ed3"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter mv poster"
        android:id="@+id/ed4"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="add to database"
        android:onClick="click"/>

</LinearLayout>
